--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -1,29 +1,27 @@
 name: Checks
-on: 
-  workflow_dispatch:
+on: [push]
 
 jobs:
   test-lint:
     name: Test and Lint
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-        
-      - name: List files (debug)
-        run: ls -la
-        
-      - name: Check Docker Compose file (debug)
-        run: cat Docker-compose.yml || cat docker-compose.yml || echo "No compose file found"
-        
+
+      - name: Install Docker Compose
+        run: |
+          sudo curl -L "https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+          sudo chmod +x /usr/local/bin/docker-compose
+
       - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_HUB_USER }}
           password: ${{ secrets.DOCKER_HUB_TOKEN }}
-      
+
       - name: Test
         run: docker-compose run --rm app sh -c "cd app && python manage.py test"
-        
+
       - name: Lint
         run: docker-compose run --rm app sh -c "cd app && flake8"
